<resources>
    <string name="app_name">Sneaker Shop</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_lbl_username">Username</string>
    <string name="tv_lbl_password">Password</string>
    <string name="btn_lbl_login">LOGIN</string>
    <string name="btn_lbl_register">REGISTER</string>
    <string name="btn_lbl_save">SAVE</string>
    <string name="btn_lbl_cancel">CANCEL</string>
    <string name="tv_welcome_to">Welcome To</string>
    <string name="tv_the_sneaker_shop">The Sneaker Shop</string>
    <string name="lbl_shoe_name">Shoe Name</string>
    <string name="lbl_shoe_company">Company</string>
    <string name="lbl_shoe_size">Shoe Size</string>
    <string name="lbl_shoe_descr">Description</string>
    <string name="fab_cnt_descr">New Shoe</string>
    <string name="menu_itm_logout">Logout</string>
    <string name="warn_invalid_shoe">Invalid Shoe Details</string>
    <string name="lst_shoe_name">Shoe Name : </string>
    <string name="lst_company">Company : </string>
    <string name="lst_shoe_size">Shoe Size : </string>
    <string name="lst_description">Description : </string>
    <string name="cnt_desc_sneaker_image">Sneaker Image</string>
</resources>
