<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name = "shoeListViewModel"
            type = "com.udacity.shoestore.models.ShoeListViewModel"/>
    </data>

    <!--Since this a fairly straightforward UI, Linearlayout is sufficient to build the UI while
     still allowing for easy addition of new Shoe-Detail fields in future-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        style="@style/NewShoeTextStyle"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/NewShoeLabelStyle"
                android:text="@string/lbl_shoe_name"
                android:labelFor="@id/et_shoe_name"/>

            <EditText
                android:id="@+id/et_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:text="@={shoeListViewModel.newShoeName}"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/NewShoeLabelStyle"
                android:text="@string/lbl_shoe_company"
                android:labelFor="@id/et_shoe_company"/>

            <EditText
                android:id="@+id/et_shoe_company"
                style="@style/NewShoeEditTextStyle"
                android:text="@={shoeListViewModel.newShoeCompany}"
                android:importantForAutofill="no"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/NewShoeLabelStyle"
                android:text="@string/lbl_shoe_size"
                android:labelFor="@id/et_shoe_size"/>

            <EditText
                android:id="@+id/et_shoe_size"
                style="@style/NewShoeEditTextStyle"
                android:text="@={shoeListViewModel.newShoeSize}"
                android:importantForAutofill="no"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:padding="20dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/NewShoeLabelStyle"
                android:text="@string/lbl_shoe_descr"
                android:labelFor="@id/et_shoe_descr"/>

            <EditText
                android:id="@+id/et_shoe_descr"
                style="@style/NewShoeEditTextStyle"
                android:importantForAutofill="no"
                android:text="@={shoeListViewModel.newShoeDescr}"
                android:inputType="text" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_save"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            android:text="@string/btn_lbl_save" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="30dp"
            android:text="@string/btn_lbl_cancel" />

    </LinearLayout>

</layout>
