<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Since this a fairly straightforward UI, Linearlayout is sufficient to display
     a single shoe item while still allowing for easy addition of new Shoe-Detail fields in future-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/NewShoeLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lst_shoe_name" />

            <TextView
                android:id="@+id/tv_shoe_name"
                style="@style/NewShoeLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/NewShoeLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lst_company" />

            <TextView
                android:id="@+id/tv_shoe_company"
                style="@style/NewShoeLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/NewShoeLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lst_shoe_size" />

            <TextView
                android:id="@+id/tv_shoe_size"
                style="@style/NewShoeLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:orientation="horizontal">

            <TextView
                style="@style/NewShoeLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lst_description" />

            <TextView
                android:id="@+id/tv_shoe_descr"
                style="@style/NewShoeLabelStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>

    </LinearLayout>

</layout>